[package]
name = "gregorian"
version = "0.1.1"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
repository = "https://github.com/de-vri-es/gregorian-rs"
documentation = "https://docs.rs/gregorian"
readme = "README.md"

description = "easy to use date library"
keywords = ["date", "calendar", "gregorian", "proleptic"]
categories = ["date-and-time", "no-std"]

edition = "2018"

[features]
default = ["std"]
std = []

[dev-dependencies]
assert2 = "0.3.3"
