[package]
name = "gregorian"
version = "0.2.4"
license = "BSD-2-Clause"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
repository = "https://github.com/de-vri-es/gregorian-rs"
documentation = "https://docs.rs/gregorian"
readme = "README.md"

description = "easy to use date library"
keywords = ["date", "calendar", "gregorian", "proleptic"]
categories = ["date-and-time", "no-std"]

edition = "2021"

[features]
default = ["std"]
std = ["libc"]
serde = ["dep:serde"]

[dependencies]
libc = { version = "0.2.82", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
assert2 = "0.3.3"
gregorian = { path = ".", features = ["serde"] }
serde_yaml = "0.9.14"
